--- a/assignments/Closest Answer Game/index.html
+++ b/assignments/Closest Answer Game/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Number Guessing Game</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Closest Answer Game</title>
 <style>
 body {
   background-color: #f0f0f0;
